# minepoch

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  Makefile.mrb  README.md
.github/workflows/: CI.yml
Data/: drift_kinetic.deck  em_wave.deck  example_input.deck  one_stream.deck  two_stream.deck  two_stream_substep.deck
Docs/: excal.bib  implicit.bib  implicit_pic.tex  report_implemented.tex
example_decks/: one_stream.deck  two_stream_neutral.deck
minepoch_py/: energy.py  momentum.py  test.py  two_stream.py
src/: COMMIT  boundary.f90  current_deposition.F90  epoch3d.F90  fields.f90  implicit.F90  implicit.f90  laser.f90  particles.F90  shared_data.F90
src/cpp/: JFNKInterface.cpp  JFNKInterface.h  JFNKSolver.cpp  JFNKSolver.h  TrilinosInterface.cpp  TrilinosInterface.h
src/deck/: deck.f90  strings.f90
src/housekeeping/: balance.F90  finish.f90  mpi_routines.F90  mpi_subtype_control.f90  particle_pointer_advance.f90  partlist.F90  problem_setup.f90  setup.F90  utilities.F90  utilities.f90  welcome.F90
src/io/: calc_df.F90  diagnostics.F90
src/unit_tests/field_evaluation/: Makefile
src/unit_tests/field_evaluation/src/: field_test.F90
src/unit_tests/particle_momentum/: Makefile  check_test.py
src/unit_tests/particle_momentum/src/: particle_momentum_test.F90
src/unit_tests/particle_position/: Makefile  check_test.py
src/unit_tests/particle_position/src/: particle_load_test.F90  particle_position_test.F90
src/user_interaction/: custom_laser.f90  deltaf_loader.F90  helper.F90  ic_module.f90  particle_init.F90  particle_loading.F90  particle_temperature.F90
